--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <input type="checkbox" name="festivalDate" value="2025-05-01">
         1. Mai 2025
       </label><br><br>
+      <input type="hidden" name="_replyto" value="your-email@example.com">
       <button type="submit">Submit</button>
     </form>
   </div>
