--- a/index.html
+++ b/index.html
@@ -25,23 +25,23 @@
   
   <!-- Hidden form that will appear after heart expansion -->
   <div id="festivalForm">
-    <form id="dateForm" action="https://formspree.io/f/xldgqevk" method="POST">
-      <p>Wann soll das Festival der Liebe stattfinden?</p>
-      <label>
-        <input type="checkbox" name="festivalDate" value="2025-03-01">
-        1. März 2025
-      </label><br>
-      <label>
-        <input type="checkbox" name="festivalDate" value="2025-04-01">
-        1. April 2025
-      </label><br>
-      <label>
-        <input type="checkbox" name="festivalDate" value="2025-05-01">
-        1. Mai 2025
-      </label><br><br>
-      <input type="hidden" name="_replyto" value="your-email@example.com">
-      <button type="submit">Submit</button>
-    </form>
+    <form id="dateForm">
+  <p>Wann soll das Festival der Liebe stattfinden?</p>
+  <label>
+    <input type="checkbox" name="festivalDate" value="2025-03-01">
+    1. März 2025
+  </label><br>
+  <label>
+    <input type="checkbox" name="festivalDate" value="2025-04-01">
+    1. April 2025
+  </label><br>
+  <label>
+    <input type="checkbox" name="festivalDate" value="2025-05-01">
+    1. Mai 2025
+  </label><br><br>
+  <button type="submit">Submit</button>
+</form>
+
   </div>
   
   <!-- Thank you message in a white box -->
