--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
   <!-- External libraries -->
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
+  
+  <!-- Inline script to check cookie and hide elements early -->
+  <script>
+    // Quick cookie check function
+    function hasCookie(name) {
+      return document.cookie.split(';').some(c => c.trim().startsWith(name + '='));
+    }
+    // If the user has already submitted, hide the heart and form immediately.
+    if (hasCookie("submitted")) {
+      // We can add a style to hide the elements. Using CSS here is immediate.
+      document.write('<style>#heartScreen, #festivalForm { display: none !important; } #thankYou { display: block !important; }</style>');
+    }
+  </script>
 </head>
 <body>
   <div id="clouds"></div>
@@ -25,28 +38,30 @@
   
   <!-- Hidden form that will appear after heart expansion -->
   <div id="festivalForm">
-    <form id="dateForm">
-  <p>Wann soll das Festival der Liebe stattfinden?</p>
-  <label>
-    <input type="checkbox" name="festivalDate" value="2025-03-01">
-    1. März 2025
-  </label><br>
-  <label>
-    <input type="checkbox" name="festivalDate" value="2025-04-01">
-    1. April 2025
-  </label><br>
-  <label>
-    <input type="checkbox" name="festivalDate" value="2025-05-01">
-    1. Mai 2025
-  </label><br><br>
-  <button type="submit">Submit</button>
-</form>
-
+    <form id="dateForm" action="https://formspree.io/f/xldgqevk" method="POST">
+      <p>Bitte gib deinen Namen ein:</p>
+      <input type="text" name="name" placeholder="Dein Name" required><br><br>
+      
+      <p>Wann soll das Festival der Liebe stattfinden?</p>
+      <label>
+        <input type="checkbox" name="festivalDate" value="2025-07-12">
+        12. Juli 2025
+      </label><br>
+      <label>
+        <input type="checkbox" name="festivalDate" value="2025-07-19">
+        19. Juli 2025
+      </label><br>
+      <label>
+        <input type="checkbox" name="festivalDate" value="2025-09-13">
+        13. September 2025
+      </label><br><br>
+      <button type="submit">Submit</button>
+    </form>
   </div>
   
-  <!-- Thank you message in a white box -->
-  <div id="thankYou">
-    Danke. Mehr Informationen bald auf dieser Website. Stay tuna ;)
+  <!-- Thank you message container -->
+  <div id="thankYou" style="display: none;">
+    Du hast bereits abgestimmt. Mehr Informationen bald auf dieser Website. Stay tuna ;)
   </div>
   
   <!-- Link to external JavaScript -->
