--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <div id="festivalForm">
     <form id="dateForm" action="https://formspree.io/f/xldgqevk" method="POST">
       <p>Wann soll das Festival der Liebe stattfinden?</p>
-      <p>Bitte gebe alle möglichen Termine an damit möglichst viele teilnehmen können</p>
+      <p>Bitte gebe alle möglichen Termine an damit möglichst viele teilnehmen können:</p>
       
       <label>
         <input type="checkbox" name="festivalDate" value="2025-07-12">
