--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
   </script>
 </head>
 <body>
+  <div id="countdown"></div>
+  
   <div id="clouds"></div>
   <!-- Festival SVG always visible -->
   <div id="festivalText">
