--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
 </div>
 
 
-<div id="version-date">Versionsdatum: 4.3.2025</div>
+<div id="version-date">Versionsdatum: 5.3.2025<br>Updates:💛💙💚 </div>
 
-  
   <!-- Centered heart container -->
   <div id="heartScreen">
     <div id="heartContainer">
@@ -34,32 +33,98 @@
   </div>
   
   <div id="content-yellow" style="display:none;">
-  <h2>Anlass</h2>
-  <h4>Was ist das Fest der Liebe? </h4>
-
-<p>Hierzu Ausschnitte aus Paulines Tagebuch. Der erste Eintrag in dem Michael vorkommt (November 2016) ist noch relativ trocken: <i>"Am Donnerstag habe ich nett mit Felix und Michael Algebra gemacht" </i>. 
-Zwei Monate und mehrere Einträge später endete der Eintrag vom 8.1.2017 mit <i>"[...] wir meinten beide, dass wir einander cool finden und gerne eine Art Beziehung ausprobieren wollen =)" </i> </p>
-
-<p>Das Fest der Liebe ist ein Fest, das unsere Liebe und Freundschaft feiert.</p>
-
-<h4> Was hat es mit der Website auf sich</h4>
-  <p>
- In den nächsten Tagen und Wochen wird sich diese Website mit allen relevanten Informationen füllen. Stay tuna
+<h2 class="headyellow"> Hallo ihr Lieben! </h2>
+<p> 
+Wir laden euch herzlich ein, mit uns gemeinsam zu feiern! Aber was feiern wir eigentlich? Heiraten wir nach gut acht Jahren Beziehung endlich?
+Hmm..., not quite. Trotzdem möchten wir mit euch die Liebe und gemeinsame Freundschaft ganz fett zelebrieren! 
+Und wie es der Zufall will, sind wir beide 30 geworden, was ebenso begossen werden muss!
+Ihr könnt also eurer Interpretation unseres Festes freien Lauf lassen: Unkonventionelle „Hochzeit“ oder Feier unseres dreißigsten Geburtstages – Wir freuen uns einfach, wenn ihr dabei seid bei der heißesten Fete des Jahres!
 </p>
+<h2 class="headyellow"> Wie alles begann… </h2>
+<p>
+Bei uns begann alles 2016 im intensiven Mathestudium in Göttingen:
+</p>
+    <strong> <p class="diary-text" >Paulines Tagebuch. Erste Erwähnung von Micha im November 2016: </p> </strong>
+    <blockquote class="diary-entry">
+      "Am Donnerstag habe ich nett mit Felix und Michael Algebra gemacht" <br>
+      <small>(Danach wurde Micha nie wieder beim vollen Namen genannt.)</small>
+    </blockquote>
+<br>
+
+<p>Kurz vor Weihnachten schickte Micha Pauline auf Facebook jeden Tag einen Grund, zu seiner Silvesterparty nach Göttingen zu kommen:</p>
+    <blockquote class="diary-entry">
+	<ol class="reasons-list">
+      <li>Ein Partylicht</li>
+      <li>(Kater-)Frühstück am 1. Januar</li>
+      <li>Chinesisch sprechen mit seiner Mitbewohnerin Yajie</li>
+      <li>100 Knicklichter</li>
+    </ol>
+	</blockquote>
+    <p>...und das hat Pauline überzeugt! Einige Tage, zwei Feiern und ein paar Küsse später war es dann soweit:</p>
+    
+    <strong><p class="diary-text" >Paulines Tagebuch. Ausschnitt vom 8.1.2017:</p></strong>
+    <blockquote class="diary-entry">
+      "[...] wir meinten beide, dass wir einander cool finden und gerne eine Art Beziehung ausprobieren wollen 😊"
+    </blockquote>
+    <br>
+    <p>Seitdem führen wir unsere Art Beziehung – wir haben in Göttingen, Chengdu, Leipzig, Würzburg und Berlin gelebt, mal zusammen in einem Haus, mal 170 bis 7656 km voneinander entfernt.
+    <br><br>
+  </p>
+  <div class="headline headyellow-headline">
+  Das Fest der Liebe ist ein Fest, das unsere Liebe feiert.<br>
+</div>
+
 
 </div>
+
 <div id="content-blue" style="display:none;">
-  <h2>Location und Ablauf</h2>
-  <p> Wird zeitnah bekannt gegeben</p>
+  <h2 class="headblue">Wann und wo wird gefeiert?</h2>
+  <p>
+    Das Fest findet am 13. September 2025 im Café – Restaurant <a href="https://ufafabrik.de/10467/rudi-rosa.html">Rudi & Rosa</a> auf dem Gelände der ufaFabrik statt. 
+	Das Gelände ist eine ehemalige Filmfabrik, auf der heute verschiedene kulturelle, soziale und ökologische Projekte beheimatet sind.
+  </p>
+  
+  <h2 class="headblue">Was ist der Ablauf?</h2>
+  <p>
+    Das Fest startet um 15 Uhr mit einer gemütlichen Runde Kaffee und Kuchen.
+	Den Nachmittag über soll es verschiedene Programmpunkte geben: Lustige Spiele, kleine Aufführungen und emotionale Reden.
+	Wir freuen uns über jeden Beitrag von euch! &lt;3<br>
+    Abends werden wir mit einem veganen/vegetarischen Buffet verköstigt und danach wird das Tanzbein geschwungen! 
+	Gegen 3 Uhr könnt ihr mit „Angels“ von Robbie Williams als Rausschmeißer rechnen, aber vielleicht wird ja noch weitergezogen…
+  </p>
+  
+  <!-- Schlagzeile im Stil einer Headline -->
+  <div class="headline headblue-headline">
+    Das Fest der Liebe ist ein Fest, das unsere Liebe und Freundschaft feiert.
+  </div>
+  
+  <h2 class="headblue">Soll man euch gratulieren oder etwas schenken?</h2>
+  <p>
+    Selbstverständlich könnt ihr uns für unsere herausragenden Errungenschaften gratulieren ;). Aber ansonsten freuen wir uns einfach, wenn ihr kommt und uns vielleicht eine Kostprobe eures (geheimen) Talents präsentiert oder ein kleines Spiel vorbereitet. Wir sind ganz gespannt!<br>
+    Außerdem wollen wir schon einmal ankündigen, dass wir nur die Speisen übernehmen können und alle Getränke auf Selbstzahlerbasis angeboten werden ‘:D
+  </p>
+  
+  <h2 class="headblue">Gibt es einen Dresscode?</h2>
+  <p>
+    Kommt so, wie ihr euch am wohlsten fühlt 😊
+  </p>
+</div>
 
-</div>
+
+
 <div id="content-green" style="display:none;">
-  <h2>Grünes Herz</h2>
-  <p>...steht für Kraft! :)</p>
-  <img src="habeck.jpg" alt="Habeck" style="max-width:100%; display:block; margin:20px auto;">
+  <h2 class="headgreen">Grünes Herz</h2>
+  <p>Die Website ist euch noch nicht kitschig genug?
+  In den nächsten Tagen und Woche werden wir sie kontinuierlich updaten und ihr könnt gespannt sein was es alles zu entdecken gibt!</p>
+  
+  <div class="headline headgreen-headline">
+    Das Fest der Liebe ist ein Fest der Liebe
+  </div>
+  
 </div>
+
 <div id="content-pink" style="display:none;">
-  <h2>Zu- und Absagen</h2>
+  <h2 class="headpink">Zu- und Absagen</h2>
   <p> Das wird der Anmeldebereich. </p>
 </div>
 
