--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   
   <div id="clouds"></div>
   <!-- Festival SVG always visible -->
-<div id="logo" style="opacity:0; position:fixed; top:10px; left:50%; transform:translateX(-50%); z-index:30;">
-  <img src="logo.svg" alt="Festival der Liebe" style="max-width:100%; height:auto;">
+<div id="logo">
+  <img src="logo.svg" alt="Festival der Liebe">
 </div>
 
 
@@ -95,7 +95,7 @@ Bei uns begann alles 2016 im intensiven Mathestudium in Göttingen:
   
   <!-- Schlagzeile im Stil einer Headline -->
   <div class="headline headblue-headline">
-    Das Fest der Liebe ist ein Fest, das unsere Liebe und Freundschaft feiert.
+    Das Fest der Liebe erzählt die Geschichte von Gemeinschaft und Freundschaft.
   </div>
   
   <h2 class="headblue">Soll man euch gratulieren oder etwas schenken?</h2>
@@ -115,7 +115,7 @@ Bei uns begann alles 2016 im intensiven Mathestudium in Göttingen:
 <div id="content-green" style="display:none;">
   <h2 class="headgreen">Grünes Herz</h2>
   <p>Die Website ist euch noch nicht kitschig genug?
-  In den nächsten Tagen und Woche werden wir sie kontinuierlich updaten und ihr könnt gespannt sein was es alles zu entdecken gibt!</p>
+  In den nächsten Tagen und Wochen werden wir sie kontinuierlich updaten und ihr könnt gespannt sein, was es alles zu entdecken gibt!</p>
   
   <div class="headline headgreen-headline">
     Das Fest der Liebe ist ein Fest der Liebe
