--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ Bei uns begann alles 2016 im intensiven Mathestudium in Göttingen:
   
   <!-- Schlagzeile im Stil einer Headline -->
   <div class="headline headblue-headline">
-    Das Fest der Liebe erzählt die Geschichte von Gemeinschaft und Freundschaft.
+    Das Fest der Liebe ist ein Fest, das unsere liebsten Menschen versammelt und eine Geschichte von Freundschaft, Liebe und Gemeinschaft erzählt.
   </div>
   
   <h2 class="headblue">Soll man euch gratulieren oder etwas schenken?</h2>
