--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ Bei uns begann alles 2016 im intensiven Mathestudium in Göttingen:
     <input type="text" id="name" name="name" required>
 
     <fieldset>
-      <legend>Ich/wir kommen zu dem Fest der Liebe:</legend>
+      <legend>Ich/Wir kommen zu dem Fest der Liebe:</legend>
       <label>
         <input type="radio" name="attendance" value="ja" required> Ja
       </label>
