--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
+  
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fest der Liebe</title>
   <!-- Link to external CSS -->
@@ -136,6 +137,16 @@ Bei uns begann alles 2016 im intensiven Mathestudium in Göttingen:
       </label>
       <label>
         <input type="radio" name="attendance" value="nein" required> Nein
+      </label>
+    </fieldset>
+
+    <fieldset>
+      <legend>Ich/Wir brauchen einen Schlafplatz:</legend>
+      <label>
+        <input type="radio" name="sleepingplace" value="ja" required> Ja
+      </label>
+      <label>
+        <input type="radio" name="sleepingplace" value="nein" required> Nein
       </label>
     </fieldset>
 
