--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@ Bei uns begann alles 2016 im intensiven Mathestudium in Göttingen:
     <p>Seitdem führen wir unsere Art Beziehung – wir haben in Göttingen, Chengdu, Leipzig, Würzburg und Berlin gelebt, mal zusammen in einem Haus, mal 170 bis 7656 km voneinander entfernt.
     <br><br>
   </p>
-  <div class="headline headyellow-headline">
+<!--  <div class="headline headyellow-headline">
   Das Fest der Liebe ist ein Fest, das unsere Liebe feiert.<br>
-</div>
+</div> -->
 
 
 </div>
