--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ Bei uns begann alles 2016 im intensiven Mathestudium in Göttingen:
       </label>
     </fieldset>
 
-    <label for="program">Wir überlegen uns einen Programmpunkt (Lied, Spiel, Streich, Rede...):</label>
+    <label for="program">Sonstige Anmerkungen:</label>
     <textarea id="program" name="message"></textarea>
 
     <button type="submit">Absenden</button>
