gelbes herz erklärung

--- a/index.html
+++ b/index.html
@@ -71,6 +71,17 @@ Bei uns begann alles 2016 im intensiven Mathestudium in Göttingen:
     <p>Seitdem führen wir unsere Art Beziehung – wir haben in Göttingen, Chengdu, Leipzig, Würzburg und Berlin gelebt, mal zusammen in einem Haus, mal 170 bis 7656 km voneinander entfernt.
     <br><br>
   </p>
+
+  <h2 class="headyellow"> Das Fest der Liebe </h2>
+  <p>
+    Aber genug zu uns! Wir möchten bei dem Fest der Liebe die Freundschaft und Gemeinschaft zu euch allen feiern! 
+    Dazu nehmen wir uns den 13. September und zelebrieren im Rudi&Rosa. Mehr Informationen dazu findet ihr beim blauen Herz.
+    Wir freuen uns wenn ihr uns euer Talent zeigt und zum besten gebt. Keine Scheu! 
+    Traut euch ein kleinen Sketch zu machen, zu musizieren, einen Streich zu spielen oder sonst etwas. 
+    Es ist uns wichtig, dass wir dabei nicht im Mittelpunkt eurer Aufmerksamkeit stehen müssen,
+    gerne einfach aufführen, was euch besonders gefällt und liegt. Entsprechende Ansprechpersonen findet ihr unter dem grünen Herz. 
+    Unter dem rosa Herz könnt ihr Zu&Absagen (es reicht ebenso aus uns per Textnachricht Bescheid zu geben.)
+  </p>
 <!--  <div class="headline headyellow-headline">
   Das Fest der Liebe ist ein Fest, das unsere Liebe feiert.<br>
 </div> -->
