--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ Bei uns begann alles 2016 im intensiven Mathestudium in Göttingen:
     Das Fest startet um 15 Uhr mit einer gemütlichen Runde Kaffee und Kuchen.
 	Den Nachmittag über soll es verschiedene Programmpunkte geben: Lustige Spiele, kleine Aufführungen und emotionale Reden.
 	Wir freuen uns über jeden Beitrag von euch! &lt;3<br>
-    Abends werden wir mit einem veganen/vegetarischen Buffet verköstigt und danach wird das Tanzbein geschwungen! 
+    Abends werden wir mit einem veganen Buffet verköstigt und danach wird das Tanzbein geschwungen! 
 	Gegen 3 Uhr könnt ihr mit „Angels“ von Robbie Williams als Rausschmeißer rechnen, aber vielleicht wird ja noch weitergezogen…
   </p>
   
@@ -125,10 +125,37 @@ Bei uns begann alles 2016 im intensiven Mathestudium in Göttingen:
 
 
 <div id="content-green" style="display:none;">
-  <h2 class="headgreen">Grünes Herz</h2>
-  <p>Die Website ist euch noch nicht kitschig genug?
-  In den nächsten Tagen und Wochen werden wir sie kontinuierlich updaten und ihr könnt gespannt sein, was es alles zu entdecken gibt!</p>
+  <h2 class="headgreen">Programm</h2>
+  <p> Das Fest der Liebe soll lebendig sein und wir würden uns freuen wenn ihr Lust habt einen Input zu geben. Was könnte das sein?
+    Hier sind ein paar Ideen, aber der Kreativität dürfen hier natürlich keine Grenzen gesetzt werden.
+  </p>
+  <ul>
+    <li>Rede über (insert: Lieblingsthema)</li>
+    <li> Fotoreihe auf dem Beamer </li>
+    <li>Sketch/Theaterstück</li>
+    <li>Tanzworkshop</li>
+    <li>Musikstück </li>
+  </ul>
+
+  Damit wir einen guten Ablauf ist, müssen wir die Programmpunkte gut planen. Hierfür könnt ihr euren Programmpunkt bei dem 'Programm-Komitee' anmelden
+ <ul>
+    <li>Alina Koschmieder - Tel. +33 7 82 88 05 78</li>
+    <li>Tom Szyslo - Tel. +49 1573 2584 229</li>
+  </ul>
+  Mit diesen Menschen könnt ihr auch absprechen, was ihr für euren Input von uns benötigt. Für uns ist es natürlich am besten, 
   
+  <ul>
+    <li>Leinwand&Beamer</li>
+    <li>Musikboxen</li>
+    <li>Zwei Mikrofone</li>
+    <li>Gitarre</li>
+    <li>Ukulele</li>
+    <li>Keyboard</li>
+
+  </ul>
+  
+  Falls wir zeitlich oder vom Aufwand nicht jeden Input schaffen, so seid bitte nicht sauer auf uns!
+
   <div class="headline headgreen-headline">
     Das Fest der Liebe ist ein Fest der Liebe
   </div>
