--- a/index.html
+++ b/index.html
@@ -132,9 +132,11 @@ Bei uns begann alles 2016 im intensiven Mathestudium in Göttingen:
   <ul>
     <li>Rede über (insert: Lieblingsthema)</li>
     <li> Fotoreihe auf dem Beamer </li>
+    <li>Schwank aus dem Leben/Anekdote</li>
     <li>Sketch/Theaterstück</li>
     <li>Tanzworkshop</li>
     <li>Musikstück </li>
+    <li>Spiel mit der ganzen Gruppe</li>
   </ul>
 
   Damit wir einen guten Ablauf ist, müssen wir die Programmpunkte gut planen. Hierfür könnt ihr euren Programmpunkt bei dem 'Programm-Komitee' anmelden
@@ -156,6 +158,13 @@ Bei uns begann alles 2016 im intensiven Mathestudium in Göttingen:
   
   Falls wir zeitlich oder vom Aufwand nicht jeden Input schaffen, so seid bitte nicht sauer auf uns!
 
+  <h2 class="headgreen">Unser Beitrag</h2>
+  <p> <b>Vorstellungsrunde: </b>Wir haben uns vorgenommen im Verlauf der Feier alle Menschen einmal vorzustellen, z.B. wie wir uns kennengelernt haben.
+  Sehr gerne könnt ihr an dieser Stelle auch etwas erzählen, müsst ihr aber nicht </p>
+
+  <p> <b>Fotowand: </b>Wir würden an einer Fotowand Bilder aufhängen. Bringt gerne 1-3 Fotos von euch/uns mit. Am liebsten eins aus der Zeit, wo wir uns ungefähr kennengelernt haben. </p>
+
+  
   <div class="headline headgreen-headline">
     Das Fest der Liebe ist ein Fest der Liebe
   </div>
