--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@ Bei uns begann alles 2016 im intensiven Mathestudium in Göttingen:
   <h2 class="headyellow"> Das Fest der Liebe </h2>
   <p>
     Aber genug zu uns! Wir möchten bei dem Fest der Liebe die Freundschaft und Gemeinschaft zu euch allen feiern! 
-    Dazu nehmen wir uns den 13. September und zelebrieren im Rudi&Rosa. Mehr Informationen dazu findet ihr beim blauen Herz.
-    Wir freuen uns wenn ihr uns euer Talent zeigt und zum besten gebt. Keine Scheu! 
-    Traut euch ein kleinen Sketch zu machen, zu musizieren, einen Streich zu spielen oder sonst etwas. 
-    Es ist uns wichtig, dass wir dabei nicht im Mittelpunkt eurer Aufmerksamkeit stehen müssen,
-    gerne einfach aufführen, was euch besonders gefällt und liegt. Entsprechende Ansprechpersonen findet ihr unter dem grünen Herz. 
-    Unter dem rosa Herz könnt ihr Zu&Absagen (es reicht ebenso aus uns per Textnachricht Bescheid zu geben.)
-  </p>
+    Dazu nehmen wir uns den 13. September frei und zelebrieren im Rudi&Rosa. Mehr Informationen dazu findet ihr beim blauen Herz 💙.</p>
+    
+    <p>Wir freuen uns wenn ihr uns euer Talent zeigt und zum besten gebt. Keine Scheu! 
+    Traut euch ein kleinen Sketch zu machen, zu musizieren, einen Streich zu spielen oder sonst etwas.
+    Mehr Informationen findet ihr unter dem grünen Herz 💚.</p>
+    <p>Zu und Absagen könnt ihr unter dem rosa Herz 💖 (eine Textnachricht ist aber auch ausreichend).</p>
+  
 <!--  <div class="headline headyellow-headline">
   Das Fest der Liebe ist ein Fest, das unsere Liebe feiert.<br>
 </div> -->
@@ -164,7 +164,7 @@ Bei uns begann alles 2016 im intensiven Mathestudium in Göttingen:
 
   <p> <b>Fotowand: </b>Wir würden an einer Fotowand Bilder aufhängen. Bringt gerne 1-3 Fotos von euch/uns mit. Am liebsten eins aus der Zeit, wo wir uns ungefähr kennengelernt haben. </p>
 
-  
+
   <div class="headline headgreen-headline">
     Das Fest der Liebe ist ein Fest der Liebe
   </div>
