--- a/index.html
+++ b/index.html
@@ -73,14 +73,21 @@ Bei uns begann alles 2016 im intensiven Mathestudium in Göttingen:
   </p>
 
   <h2 class="headyellow"> Das Fest der Liebe </h2>
-  <p>
-    Aber genug zu uns! Wir möchten bei dem Fest der Liebe die Freundschaft und Gemeinschaft zu euch allen feiern! 
-    Dazu nehmen wir uns den 13. September frei und zelebrieren im Rudi&Rosa. Mehr Informationen dazu findet ihr beim blauen Herz 💙.</p>
-    
-    <p>Wir freuen uns wenn ihr uns euer Talent zeigt und zum besten gebt. Keine Scheu! 
-    Traut euch ein kleinen Sketch zu machen, zu musizieren, einen Streich zu spielen oder sonst etwas.
-    Mehr Informationen findet ihr unter dem grünen Herz 💚.</p>
-    <p>Zu und Absagen könnt ihr unter dem rosa Herz 💖 (eine Textnachricht ist aber auch ausreichend).</p>
+ <p>
+  Aber genug von uns! Wir möchten beim Fest der Liebe die Freundschaft und Gemeinschaft zu euch allen feiern! 
+  Dafür nehmen wir uns den 13. September frei und zelebrieren im Rudi & Rosa. Mehr Informationen dazu findet ihr beim blauen Herz 💙.
+</p>
+
+<p>
+  Wir freuen uns, wenn ihr uns euer Talent zeigt und zum Besten gebt - keine Scheu! 
+  Traut euch, einen kleinen Sketch zu machen, zu musizieren, einen Streich zu spielen oder etwas anderes Kreatives zu präsentieren. 
+  Mehr Informationen findet ihr unter dem grünen Herz 💚.
+</p>
+
+<p>
+  Zu- und Absagen könnt ihr unter dem rosa Herz 💖 (eine Textnachricht reicht aber auch aus).
+</p>
+
   
 <!--  <div class="headline headyellow-headline">
   Das Fest der Liebe ist ein Fest, das unsere Liebe feiert.<br>
