--- a/index.html
+++ b/index.html
@@ -133,44 +133,48 @@ Bei uns begann alles 2016 im intensiven Mathestudium in Göttingen:
 
 <div id="content-green" style="display:none;">
   <h2 class="headgreen">Programm</h2>
-  <p> Das Fest der Liebe soll lebendig sein und wir würden uns freuen wenn ihr Lust habt einen Input zu geben. Was könnte das sein?
-    Hier sind ein paar Ideen, aber der Kreativität dürfen hier natürlich keine Grenzen gesetzt werden.
   
+  <p>Das Fest der Liebe soll lebendig sein, und wir würden uns freuen, wenn ihr Lust habt, einen Input zu geben. Was könnte das sein?
+  Hier sind ein paar Ideen, aber der Kreativität dürfen hier natürlich keine Grenzen gesetzt werden:</p>
+
   <ul>
     <li>Rede über (insert: Lieblingsthema)</li>
-    <li> Fotoreihe auf dem Beamer </li>
-    <li>Schwank aus dem Leben/Anekdote</li>
-    <li>Sketch/Theaterstück</li>
+    <li>Fotoreihe auf dem Beamer</li>
+    <li>Schwank aus dem Leben / Anekdote</li>
+    <li>Sketch / Theaterstück</li>
     <li>Tanzworkshop</li>
-    <li>Musikstück </li>
+    <li>Musikstück</li>
     <li>Spiel mit der ganzen Gruppe</li>
   </ul>
 
-  Damit wir einen guten Ablauf ist, müssen wir die Programmpunkte gut planen. Hierfür könnt ihr euren Programmpunkt bei dem 'Programm-Komitee' anmelden
- <ul>
-    <li>Alina Koschmieder - Tel. +33 7 82 88 05 78</li>
-    <li>Tom Szyslo - Tel. +49 1573 2584 229</li>
-  </ul>
-  Mit diesen Menschen könnt ihr auch absprechen, was ihr für euren Input von uns benötigt. Für uns ist es natürlich am besten, 
-  
+  <p>Damit wir einen guten Ablauf haben, müssen wir die Programmpunkte gut planen. Hierfür könnt ihr euren Programmpunkt beim "Programm-Komitee" anmelden:</p>
+
   <ul>
-    <li>Leinwand&Beamer</li>
+    <li>Alina Koschmieder – Tel. +33 7 82 88 05 78</li>
+    <li>Tom Szyslo – Tel. +49 1573 2584 229</li>
+  </ul>
+
+  <p>Mit diesen Menschen könnt ihr auch absprechen, was ihr für euren Input von uns benötigt. Für uns ist es natürlich am besten, wenn ihr vorher Bescheid gebt, falls ihr Folgendes braucht:</p>
+
+  <ul>
+    <li>Leinwand & Beamer</li>
     <li>Musikboxen</li>
     <li>Zwei Mikrofone</li>
     <li>Gitarre</li>
     <li>Ukulele</li>
     <li>Keyboard</li>
-
   </ul>
-  
-  Falls wir zeitlich oder vom Aufwand nicht jeden Input schaffen, so seid bitte nicht sauer auf uns!
-  </p>
+
+  <p>Falls wir zeitlich oder vom Aufwand her nicht jeden Input schaffen, seid bitte nicht sauer auf uns!</p>
 
   <h2 class="headgreen">Unser Beitrag</h2>
-  <p> <b>Vorstellungsrunde: </b>Wir haben uns vorgenommen im Verlauf der Feier alle Menschen einmal vorzustellen, z.B. wie wir uns kennengelernt haben.
-  Sehr gerne könnt ihr an dieser Stelle auch etwas erzählen, müsst ihr aber nicht </p>
 
-  <p> <b>Fotowand: </b>Wir würden an einer Fotowand Bilder aufhängen. Bringt gerne 1-3 Fotos von euch/uns mit. Am liebsten eins aus der Zeit, wo wir uns ungefähr kennengelernt haben. </p>
+  <p><b>Vorstellungsrunde:</b> Wir haben uns vorgenommen, im Verlauf der Feier alle Menschen einmal vorzustellen – z. B. wie wir uns kennengelernt haben.
+  Sehr gerne könnt ihr an dieser Stelle auch etwas erzählen, müsst ihr aber nicht.</p>
+
+  <p><b>Fotowand:</b> Wir würden an einer Fotowand Bilder aufhängen. Bringt gerne 1–3 Fotos von euch/uns mit – am liebsten eins aus der Zeit, in der wir uns ungefähr kennengelernt haben.</p>
+</div>
+
 
 
   <div class="headline headgreen-headline">
