--- a/index.html
+++ b/index.html
@@ -107,9 +107,10 @@ Bei uns begann alles 2016 im intensiven Mathestudium in Göttingen:
   <p>
     Das Fest startet um 15 Uhr mit einer gemütlichen Runde Kaffee und Kuchen.
 	Den Nachmittag über soll es verschiedene Programmpunkte geben: Lustige Spiele, kleine Aufführungen und emotionale Reden.
-	Wir freuen uns über jeden Beitrag von euch! &lt;3<br>
-    Abends werden wir mit einem veganen Buffet verköstigt und danach wird das Tanzbein geschwungen! 
-	Gegen 3 Uhr könnt ihr mit „Angels“ von Robbie Williams als Rausschmeißer rechnen, aber vielleicht wird ja noch weitergezogen…
+	Wir freuen uns über jeden Beitrag von euch! &lt;3<br> <p></p>
+  
+  <p>Abends werden wir mit einem veganen Buffet verköstigt und danach wird das Tanzbein geschwungen! 
+	Gegen 3 Uhr werden wir das Lokal verlassen, aber vielleicht wird ja noch weitergezogen…
   </p>
   
   <!-- Schlagzeile im Stil einer Headline -->
