--- a/index.html
+++ b/index.html
@@ -135,11 +135,11 @@ Bei uns begann alles 2016 im intensiven Mathestudium in Göttingen:
 <div id="content-green" style="display:none;">
   <h2 class="headgreen">Programm</h2>
   
-  <p>Das Fest der Liebe soll lebendig sein, und wir würden uns freuen, wenn ihr Lust habt, einen Input zu geben. Was könnte das sein?
-  Hier sind ein paar Ideen, aber der Kreativität dürfen hier natürlich keine Grenzen gesetzt werden:</p>
+  <p>Das Fest der Liebe soll lebendig werden – wir freuen uns, wenn ihr mit einem Beitrag dabei seid. Was könntet ihr beisteuern?
+  Hier ein paar Ideen; der Kreativität sind natürlich keine Grenzen gesetzt:</p>
 
   <ul>
-    <li>Rede über (insert: Lieblingsthema)</li>
+    <li>Rede über (z. B. Lieblingsthema)</li>
     <li>Fotoreihe auf dem Beamer</li>
     <li>Schwank aus dem Leben / Anekdote</li>
     <li>Sketch / Theaterstück</li>
@@ -148,14 +148,14 @@ Bei uns begann alles 2016 im intensiven Mathestudium in Göttingen:
     <li>Spiel mit der ganzen Gruppe</li>
   </ul>
 
-  <p>Damit wir einen guten Ablauf haben, müssen wir die Programmpunkte gut planen. Hierfür könnt ihr euren Programmpunkt beim "Programm-Komitee" anmelden:</p>
+  <p>Damit der Ablauf reibungslos klappt, plant bitte eure Programmpunkte im Voraus. Meldet euch hierfür beim „Programm-Komitee“ an:</p>
 
   <ul>
     <li>Alina Koschmieder – Tel. +33 7 82 88 05 78</li>
     <li>Tom Szyslo – Tel. +49 1573 2584 229</li>
   </ul>
 
-  <p>Mit diesen Menschen könnt ihr auch absprechen, was ihr für euren Input von uns benötigt. Für uns ist es natürlich am besten, wenn ihr vorher Bescheid gebt, falls ihr Folgendes braucht:</p>
+  <p>Mit ihnen könnt ihr auch besprechen, welches Equipment ihr für euren Beitrag benötigt. Gebt uns am besten vorher Bescheid, falls ihr Folgendes braucht:</p>
 
   <ul>
     <li>Leinwand & Beamer</li>
@@ -166,17 +166,15 @@ Bei uns begann alles 2016 im intensiven Mathestudium in Göttingen:
     <li>Keyboard</li>
   </ul>
 
-  <p>Falls wir zeitlich oder vom Aufwand her nicht jeden Input schaffen, seid bitte nicht sauer auf uns!</p>
+  <p>Sollten wir aus Zeit- oder Organisationsgründen nicht alle Beiträge unterbringen können, nehmt es uns bitte nicht übel.</p>
 
   <h2 class="headgreen">Unser Beitrag</h2>
 
-  <p><b>Vorstellungsrunde:</b> Wir haben uns vorgenommen, im Verlauf der Feier alle Menschen einmal vorzustellen – z. B. wie wir uns kennengelernt haben.
-  Sehr gerne könnt ihr an dieser Stelle auch etwas erzählen, müsst ihr aber nicht.</p>
+  <p><b>Vorstellungsrunde:</b> Wir möchten während der Feier alle kurz vorstellen – zum Beispiel, wie wir uns kennengelernt haben. Ihr könnt gerne selbst etwas erzählen, müsst aber nicht.</p>
 
-  <p><b>Fotowand:</b> Wir würden an einer Fotowand Bilder aufhängen. Bringt gerne 1–3 Fotos von euch/uns mit – am liebsten eins aus der Zeit, in der wir uns ungefähr kennengelernt haben.</p>
-
-
+  <p><b>Fotowand:</b> Wir gestalten eine Fotowand und freuen uns über 1–3 Fotos von euch/uns. Besonders schön wäre ein Bild aus der Zeit, als wir uns kennengelernt haben.</p>
 </div>
+
 
 
 <div id="content-pink" style="display:none;">
