--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </div>
 
 
-<div id="version-date">Version: 20.7.2025<br>Updates:💖 </div>
+<div id="version-date">Version: 20.7.2025<br>Updates:💛💙💚💖 </div>
 
   <!-- Centered heart container -->
   <div id="heartScreen">
