--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@ Bei uns begann alles 2016 im intensiven Mathestudium in Göttingen:
   </p>
   
   <!-- Schlagzeile im Stil einer Headline -->
-  <div class="headline headblue-headline">
+  <!--<div class="headline headblue-headline">
     Das Fest der Liebe ist ein Fest, das unsere liebsten Menschen versammelt und eine Geschichte von Freundschaft, Liebe und Gemeinschaft erzählt.
-  </div>
+  </div> -->
   
   <h2 class="headblue">Soll man euch gratulieren oder etwas schenken?</h2>
   <p>
