--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ Bei uns begann alles 2016 im intensiven Mathestudium in Göttingen:
 </p>
 
 <p>
-  Wir freuen uns, wenn ihr uns euer Talent zeigt und zum Besten gebt - keine Scheu! 
+  Wir freuen uns, wenn ihr Lust habt etwas Kleines beizutragen! 
   Traut euch, einen kleinen Sketch zu machen, zu musizieren, einen Streich zu spielen oder etwas anderes Kreatives zu präsentieren. 
   Mehr Informationen findet ihr unter dem grünen Herz 💚.
 </p>
@@ -110,7 +110,7 @@ Bei uns begann alles 2016 im intensiven Mathestudium in Göttingen:
 	Wir freuen uns über jeden Beitrag von euch! &lt;3<br> <p></p>
   
   <p>Abends werden wir mit einem veganen Buffet verköstigt und danach wird das Tanzbein geschwungen! 
-	Gegen 3 Uhr werden wir das Lokal verlassen, aber vielleicht wird ja noch weitergezogen…
+	Gegen 3 Uhr könnt ihr mit „Angels“ von Robbie Williams als Rausschmeißer rechnen, aber vielleicht wird ja noch weitergezogen…
   </p>
   
   <!-- Schlagzeile im Stil einer Headline -->
@@ -139,7 +139,7 @@ Bei uns begann alles 2016 im intensiven Mathestudium in Göttingen:
   Hier ein paar Ideen; der Kreativität sind natürlich keine Grenzen gesetzt:</p>
 
   <ul>
-    <li>Rede über (z. B. Lieblingsthema)</li>
+    <li>Rede (z. B. über dein Lieblingsthema)</li>
     <li>Fotoreihe auf dem Beamer</li>
     <li>Schwank aus dem Leben / Anekdote</li>
     <li>Sketch / Theaterstück</li>
